test/files/neg/t0503.scala
val x = new { } with { }
trait A 
val y = new { } with A
